--- a/src/app/paginas/password-recovery/password-recovery.component.html
+++ b/src/app/paginas/password-recovery/password-recovery.component.html
@@ -21,13 +21,13 @@
             <label class="Centralize-Text-Input">Confirm Password</label>
             <input class="Recover-input" type="password" [(ngModel)]="InputPasswordConfirm">
             @if(SendCodeReport != null){
-                <label style="color: red; padding-bottom: 10px;" class="Centralize-Text-Input">{{SendCodeReport}}</label>
+                <label [style.color]="this.ReportTextColor" style="padding-bottom: 10px;" class="Centralize-Text-Input">{{SendCodeReport}}</label>
             }
             @if(InputCode.length != 6 && InputCode.length != 0){
-                <label style="color: red; padding-bottom: 10px;" class="Centralize-Text-Input">Code must have 6 digits</label>
+                <label style="padding-bottom: 10px;" class="Centralize-Text-Input">Code must have 6 digits</label>
             }
             @if(!(InputPassword == InputPasswordConfirm) && InputPassword.length != 0 && InputPasswordConfirm.length != 0){
-                <label style="color: red; padding-bottom: 10px;" class="Centralize-Text-Input">The passwords aren't equals</label>
+                <label style="padding-bottom: 10px;" class="Centralize-Text-Input">The passwords aren't equals</label>
             }
             <div class="passwordReq">
                 <label style="color: black;">A senha deve conter:</label>
