Add markers to the map

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -26,7 +26,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" type="button" aria-disabled="true">Add a Point</a>
+            <a class="nav-link" (click)="AddAPointer()" type="button" aria-disabled="true">Add a Point</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
