--- a/src/app/paginas/login-inicial/login-inicial.component.css
+++ b/src/app/paginas/login-inicial/login-inicial.component.css
@@ -137,7 +137,7 @@
 .passwordReq{
     display: flex;
     flex-direction: column;
-    padding-top: 15px;
+    padding-bottom: 15px;
     color: gray;
 }
 
